Fixed Spacing and Mobile Layout - "Learn More >" links simplify on smaller devices to just FaRightCaret - Fixed Colors and more - Added hover effect to teaserCard and moved onClick to section

--- a/components/socialLinks/socialLinks.module.css
+++ b/components/socialLinks/socialLinks.module.css
@@ -1,4 +1,4 @@
 .link {
-  @apply transition duration-300 hover:bg-black hover:text-white hover:dark:bg-white;
+  @apply transition duration-300 hover:bg-black hover:text-white hover:dark:bg-white hover:dark:text-black;
   @apply rounded-md  dark:text-white p-2 mr-3
 }
